# Qt-Theme-Manager

./: .coveragerc  .gitignore  .pre-commit-config.yaml  =6.2.0  API_REFERENCE.md  API_REFERENCE_ja.md  CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  EXAMPLES_ja.md  INSTALL.md  INSTALL_ja.md  LICENSE  MANIFEST.in  Makefile  PREVIEW_TOOL_GUIDE.md  README.md  README_ja.md  THEME_EDITOR_GUIDE.md  ai_generated_theme.json  analyze_zebra_colors.py  demo_theme_editor.py  final_verification_report.md  improve_zebra_colors.py  launch_gui_preview.py  launch_theme_editor.py  launch_zebra_theme_editor.py  output.qss  pyproject.toml  release.sh  renovate.json  requirements.txt  setup.py  test_release.sh  test_suite_improvement_report.md  test_theme_manager.py  test_v0.2.3_release.sh  theme.qss  theme_editor_zebra_extension.py  zebra_pattern_editor.py
.amazonq/rules/: project_rules.md
.github/: dependabot.yml
.github/workflows/: README.md  ai-implementation-test.yml  ci-cd-tests.yml  ci.yml  debug-tag-trigger.yml  publish-to-pypi.yml  quick-test.yml  release.yml  security.yml  test-publish.yml
.github/workflows/archive/: README.md  ai-implementation-test.yml  ci-cd-tests.yml  debug-tag-trigger.yml  publish-to-pypi.yml  quick-test.yml  test-publish.yml
.kiro/specs/library-separation/: design.md  requirements.md  tasks.md
.kiro/steering/: qt-theme-manager-library-separation.md
config/: theme_settings.json
docs/: 1st Plot.md  REFACTORING_PLAN_REPOSITORY_SEPARATION_ja.md  REFACTORING_PLAN_v1.0.0_ja.md  RELEASE_WORKFLOW.md  THEME_EDITOR_GUIDE.md  THEME_EDITOR_REFACTORING_PLAN.md  THEME_EDITOR_REFACTORING_PLAN_ja.md  ZEBRA_STYLE_IMPROVEMENT.md
migrate/: README.md  improve_zebra_colors.py  launch_gui_preview.py  launch_theme_editor.py  launch_zebra_theme_editor.py  migration_config.py  migration_status.md  migration_verification_report.txt  theme_editor_zebra_extension.py  verify_migration.py  zebra_pattern_editor.py
migrate/examples/: README.md
migrate/scripts/: test_qt_framework.py
migrate/utils/: setup.py
qt_theme_manager/: __init__.py  main.py
qt_theme_manager/cli/: main.py  themectl.py
qt_theme_manager/config/: logging_config.py
qt_theme_manager/qt/: __init__.py  advanced_stylesheet.py  controller.py  detection.py  loader.py  preview.py  stylesheet.py  test_detection.py  theme_editor.py  types.py
scripts/: local-ci.sh  test_qt_framework.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_config_processing.py  test_cross_platform.py  test_qt_framework_detection.py
tests/unit/: __init__.py  test_api_compatibility.py  test_cli_functionality.py  test_cli_main_exceptions.py  test_cli_themectl_class.py  test_cli_themectl_main.py  test_cli_themectl_main_more.py  test_detection.py  test_logging_config.py  test_main.py  test_qt_detection.py  test_stylesheet_advanced.py  test_stylesheet_generator.py  test_theme_controller.py  test_theme_loader.py
theme_manager/: __init__.py  main.py
theme_manager/cli/: __init__.py  main.py  themectl.py
theme_manager/config/: theme_settings.json
theme_manager/qt/: __init__.py  advanced_stylesheet.py  controller.py  loader.py  preview.py  stylesheet.py  theme_editor.py
utils/: setup.py
