[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qt-theme-manager"
version = "1.0.0"
description = "A pure theme management library for PyQt5/PyQt6/PySide6 applications with automatic Qt framework detection"
readme = "README.md"
license = "MIT"
authors = [
    {name = "scottlz0310", email = "scott.lz0310@gmail.com"}
]
maintainers = [
    {name = "scottlz0310", email = "scott.lz0310@gmail.com"}
]
keywords = [
    "theme", 
    "qt", 
    "styling", 
    "pyside", 
    "pyqt", 
    "library", 
    "ui", 
    "desktop",
    "theme-management",
    "stylesheet"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
    "Environment :: X11 Applications :: Qt",
    "Framework :: Qt",
]
requires-python = ">=3.9"
dependencies = [
    # Qt自動検出システム - 実行時に PySide6 → PyQt6 → PyQt5 の順で自動選択
    # 依存関係を最小化し、ユーザーが任意のQtフレームワークを選択可能
]

[project.optional-dependencies]
# Qt フレームワーク選択肢（推奨順）
pyside6 = ["PySide6>=6.0.0"]
pyqt6 = ["PyQt6>=6.2.0"]
pyqt5 = ["PyQt5>=5.15.0"]

# 開発依存関係（ライブラリ開発用）
dev = [
    # テストフレームワーク
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    
    # コード品質ツール
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "autoflake>=2.0",
    
    # 型チェック支援
    "types-setuptools",
]

# 全Qtフレームワーク（統合テスト用）
all-qt = [
    "PySide6>=6.0.0",
    "PyQt6>=6.2.0", 
    "PyQt5>=5.15.0",
]

# 完全な開発環境
full-dev = [
    "qt-theme-manager[dev]",
    "qt-theme-manager[all-qt]",
    "tox>=4.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/scottlz0310/Qt-Theme-Manager"
Documentation = "https://github.com/scottlz0310/Qt-Theme-Manager/blob/main/README.md"
Repository = "https://github.com/scottlz0310/Qt-Theme-Manager"
"Bug Tracker" = "https://github.com/scottlz0310/Qt-Theme-Manager/issues"

[project.scripts]
qt-theme-manager = "qt_theme_manager.cli.main:main"

[tool.setuptools]
packages = ["qt_theme_manager", "qt_theme_manager.qt", "qt_theme_manager.cli", "qt_theme_manager.config"]

[tool.setuptools.package-data]
qt_theme_manager = ["config/*.json"]

# === 開発ツール設定 ===

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    # 除外するディレクトリ
    migrate
    | temp
    | sandbox
    | build
    | dist
    | \.git
    | \.pytest_cache
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["migrate/*", "temp/*", "sandbox/*"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "migrate",
    "temp",
    "sandbox",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "migrate/",
    "temp/",
    "sandbox/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=qt_theme_manager",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
